--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -36,7 +35,13 @@
                 <div class="trusted-logos">
                     <p>Samsung · SK · Hyundai · LG · Lotte · KT · POSCO</p>
                 </div>
-            </div>
+
+                <div class="service-intro-link">
+                    <a href="UBCSM.html" target="_blank" rel="noopener noreferrer">
+                        UB KOREA 서비스 소개 보기 &rarr;
+                    </a>
+                </div>
+                </div>
         </div>
 
         <div class="form-pane">
@@ -105,14 +110,13 @@
                         <label for="inquiry">문의사항 (선택)</label>
                         <textarea id="inquiry" name="inquiry" rows="5" placeholder="도입 비용, 특정 강의 커리큘럼, 데모 시연 등 무엇이든 문의하세요."></textarea>
                     </div>
-                    
                     <div class="form-group checkbox-group required">
                         <input type="checkbox" id="privacy-agree" name="privacy_agree" required>
                         <label for="privacy-agree">
                             위 박스에 체크하시면 <a href="https://www.udemy.com/terms/privacy/" target="_blank">Udemy 개인정보 보호 정책</a>에 동의하게 됩니다. Udemy, Inc.는 귀하에게 서비스 제공을 위해 귀하의 정보(예: 이름, 이메일, 전화번호)를 수집 및 이용할 수 있습니다.
                         </label>
                     </div>
-                    </div>
+                </div>
 
                 <div class="form-navigation">
                     <button type="button" class="btn btn-prev" id="prev-btn">이전</button>
