Update print statement from 'Hello' to 'Goodbye'

--- a/UBCSM.html
+++ b/UBCSM.html
@@ -665,7 +665,7 @@
                     <span class="animate-point">👉</span> 이제, 귀사의 차례입니다.
 </h2>
                 <p class="max-w-2xl mx-auto text-lg opacity-90 mb-10">임직원의 성장이 멈추면, 기업의 성장도 멈춥니다. 지금 바로 전담 매니저에게 문의하여 귀사만을 위한 맞춤형 성장 전략 컨설팅을 무료로 받아보세요.</p>
-                <a href="mailto:jhj11@wjthinkbig.com" class="bg-white text-purple-700 font-extrabold py-4 px-10 rounded-full text-lg shadow-2xl btn-primary animate-pulse-slow final-cta">무료 성장 컨설팅 신청하기</a>
+                <a href="index.html" class="bg-white text-purple-700 font-extrabold py-4 px-10 rounded-full text-lg shadow-2xl btn-primary animate-pulse-slow final-cta">무료 성장 컨설팅 신청하기</a>
             </div>
         </section>
     </div>
@@ -687,7 +687,7 @@
             <div class="flex gap-6">
                 <a href="#intro" class="hover:text-white transition">소개</a>
                 <a href="#logos" class="hover:text-white transition">고객 리뷰</a>
-                <a href="mailto:jhj11@wjthinkbig.com" class="hover:text-white transition">컨설팅 문의</a>
+                <a href="index.html" class="hover:text-white transition">컨설팅 문의</a>
             </div>
      
     </div>
@@ -970,3 +970,4 @@
     </script>
 </body>
 </html>
+
