--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 
                 <p class="trusted-by-line">
                     삼성, SK, 현대, LG, 롯데, KT, POSCO 등<br>
-                    국내외 대기업이 이미 함께 성장하고 있습니다.
+                    국내의 대기업이 이미 함께 성장하고 있습니다.
                 </p>
                 
                 <div class="testimonial-slider">
@@ -39,7 +39,6 @@
                         <p>"직원의 성장이 어떻게 비즈니스 성과로<br>이어지는지 데이터로 증명합니다."</p>
                     </div>
                 </div>
-
                 <div class="service-intro-link">
                     <a href="UBCSM.html" target="_blank" rel="noopener noreferrer">
                         UB KOREA 서비스 소개 보기 →
@@ -81,7 +80,7 @@
                     </div>
                     <div class="form-group floating required">
                         <span class="icon">📞</span>
-                        <input type="tel" id="phone" name="phone" required placeholder=" ">
+                        <input type="text" id="phone" name="phone" required placeholder=" ">
                         <label for="phone">전화번호</label>
                     </div>
                 </div>
@@ -119,7 +118,7 @@
                     <div class="form-group checkbox-group required">
                         <input type="checkbox" id="privacy-agree" name="privacy_agree" required>
                         <label for="privacy-agree">
-                            위 박스에 체크하시면 <a href="https://www.udemy.com/terms/privacy/" target="_blank">Udemy 개인정보 보호 정책</a>에 동의하게 됩니다. Udemy, Inc.는 귀하에게 서비스 제공을 위해 귀하의 정보(예: 이름, 이메일, 전화번호)를 수집 및 이용할 수 있습니다.
+                            위 박스에 체크하시면 <a href="https.www.udemy.com/terms/privacy/" target="_blank">Udemy 개인정보 보호 정책</a>에 동의하게 됩니다. Udemy, Inc.는 귀하에게 서비스 제공을 위해 귀하의 정보(예: 이름, 이메일, 전화번호)를 수집 및 이용할 수 있습니다.
                         </label>
                     </div>
                 </div>
