--- a/index.html
+++ b/index.html
@@ -3,28 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <title>미래를 준비하는 기업 교육 | Udemy Business</title>
 
-  <!-- 파비콘 (변경 없음) -->
-  favicon.png
+  <avicon.png
 
-  <!-- 성능: 폰트 프리커넥트 (업그레이드, 기능 변화 없음) -->
-  <link rel="preconnect" href="https://fonts.gstaticis.com
+  <!-- 폰트 프리커넥트 (성능 업그레이드) -->
+  https://fonts.gstatic.com
+  https://fonts.googleapis.com
 
-  <!-- 스타일 -->
   style.css
   <meta name="theme-color" content="#6d28d2" />
 </head>
 <body>
 
-  <!-- 전체 화면 배경 (고정) -->
+  <!-- 전체 화면 배경 -->
   <div class="animated-bg"></div>
 
-  <!-- 페이지 래퍼: 중앙 정렬 담당 -->
+  <!-- 페이지 래퍼: 가로 중앙, 세로 상단 -->
   <main class="page">
 
-    <!-- 메인 카드 컨테이너 -->
     <div class="form-container">
 
       <!-- 왼쪽 정보 패널 -->
@@ -56,7 +53,8 @@
           </div>
 
           <div class="service-intro-link">
-            <a href="UBCSM.html" target="_blank" rel="기 →
+            UBCSM.html
+              UB KOREA 서비스 소개 보기 →
             </a>
           </div>
 
@@ -66,7 +64,11 @@
       <!-- 오른쪽 폼 패널 -->
       <div class="form-pane">
 
-        <img src="udemy-logo-purple.png" alt="Udemy Business Logo" class="mobile-logo"s="form-intro">
+        udemy-logo-purple.png
+
+        <form id="pro-contact-form">
+
+          <p class="form-intro">
             지금 문의하시면, 1:1 전문 컨설팅과 함께<br>
             귀사만을 위한 맞춤형 데모를 <strong>무료</strong>로 제공합니다.
           </p>
@@ -142,7 +144,7 @@
               <input type="checkbox" id="privacy-agree" name="privacy_agree" required />
               <label for="privacy-agree">
                 위 박스에 체크하시면
-                <a href="https://www.udemy.com/terms/privacy/" target="_blank" rel.
+                https://www.udemy.com/terms/privacy/Udemy 개인정보 보호 정책</a>에 동의하게 됩니다.
                 Udemy, Inc.는 귀하에게 서비스 제공을 위해 귀하의 정보(예: 이름, 이메일, 전화번호)를 수집 및 이용할 수 있습니다.
               </label>
             </div>
