--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>미래를 준비하는 기업 교육 | Udemy Business</title>
 
-  <avicon.png
+  favicon.png
 
   <!-- 폰트 프리커넥트 (성능 업그레이드) -->
   https://fonts.gstatic.com
@@ -19,7 +19,7 @@
   <!-- 전체 화면 배경 -->
   <div class="animated-bg"></div>
 
-  <!-- 페이지 래퍼: 가로 중앙, 세로 상단 -->
+  <!-- 페이지 래퍼: 세로 상단, 가로 중앙(자동 마진으로 보장) -->
   <main class="page">
 
     <div class="form-container">
@@ -166,4 +166,3 @@
   script.js</script>
 </body>
 </html>
-``
