--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </div>
 
                 <div class="form-step" data-step="3">
-                    <h3 class="step-title">성장을 위한 마지막 단계입니다.</h3>
+                    <h3 class="step-title">성장을 위한 <strong>마지막 단계</strong>입니다.</h3>
                     <div class="form-group">
                         <label for="inquiry">문의사항 (선택)</label>
                         <textarea id="inquiry" name="inquiry" rows="5" placeholder="도입 비용, 특정 강의 커리큘럼, 데모 시연 등 무엇이든 문의하세요."></textarea>
