--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                 <div class="service-intro-link">
                     <a href="UBCSM.html" target="_blank" rel="noopener noreferrer">
-                        UB KOREA 서비스 소개
+                        UB KOREA 서비스 소개 <span class="link-arrow">&rarr;</span>
                     </a>
                     </div>
 
@@ -59,6 +59,7 @@
                 <p>미래를 준비하는 기업들의 <strong>마지막 선택!</strong></p>
                 <p class="mobile-trusted-by">삼성, SK, 현대, LG 등과 함께 성장하세요.</p>
             </div>
+
             <form id="pro-contact-form">
                 
                 <p class="form-intro">
