--- a/download-lotte.html
+++ b/download-lotte.html
@@ -1,3 +1,20 @@
+네\! 캡처 화면(`image_fd7743.png`) 잘 봤습니다.
+
+선생님 말씀이 맞습니다. 왼쪽 패널의 문구(`info-pane`)가 너무 길고 딱딱해서, 사용자의 시선을 사로잡는 CTA(행동 유도) 문구로 다듬을 필요가 있었습니다.
+
+요청하신 대로 \*\*"꼭 저렇게 표현하라는 것은 아님, 텍스트는 고민해서 좀 더 멋있게"\*\*를 반영하여, 롯데이노베이트와 AI의 연관성을 강조하는 전문적인 마케팅 카피로 업그레이드했습니다.
+
+  * **[수정 1]** 메인 헤드라인을 더 짧고 임팩트 있게 변경
+  * **[수정 2]** 부제목(본문)을 "귀사"의 입장에서 얻을 수 있는 혜택을 강조
+  * **[수정 3]** 오른쪽 폼의 제목도 리포트 내용과 일치하도록 변경
+
+`download-lotte.html` 파일만 아래의 **전체 코드**로 덮어쓰기(또는 깃헙에 푸시)하시면 됩니다.
+
+-----
+
+### `download-lotte.html` (수정된 풀 코드)
+
+```html
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -149,3 +166,4 @@
     <script src="download-lotte.js"></script>
 </body>
 </html>
+```
