--- a/index.html
+++ b/index.html
@@ -69,11 +69,20 @@
 
                 <div class="progress-bar">
                     <div class="progress-bar-fill" id="progress-fill"></div>
-                    <div class="progress-step active" data-step="1">기본 정보</div>
-                    <div class="progress-step" data-step="2">회사 정보</div>
-                    <div class="progress-step" data-step="3">문의</div>
+                    
+                    <div class="progress-step active" data-step="1">
+                        <div class="step-circle">1</div>
+                        <div class="step-label">기본 정보</div>
+                    </div>
+                    <div class="progress-step" data-step="2">
+                        <div class="step-circle">2</div>
+                        <div class="step-label">회사 정보</div>
+                    </div>
+                    <div class="progress-step" data-step="3">
+                        <div class="step-circle">3</div>
+                        <div class="step-label">문의</div>
+                    </div>
                 </div>
-
                 <div class="form-step active" data-step="1">
                     <h3 class="step-title">반갑습니다! <strong>담당자님</strong>을 알려주세요.</h3>
                     
@@ -144,15 +153,51 @@
                         <textarea id="inquiry" name="inquiry" rows="5" placeholder="도입 비용, 특정 강의 커리큘럼, 데모 시연 등 무엇이든 문의하세요."></textarea>
                     </div>
 
-                    <div class="form-group checkbox-group required">
-                        <input type="checkbox" id="privacy-agree" name="privacy_agree" required>
-                        <label for="privacy-agree">
-                            <a href="https://www.udemy.com/terms/privacy/" target="_blank">개인정보 보호 정책</a> 및 마케팅 정보 수신에 동의합니다.
-                        </label>
+                    <div class="form-group privacy-group required">
+                        <div class="privacy-group-header">
+                            <input type="checkbox" id="privacy-agree" name="privacy_agree" value="Y" required>
+                            <label for="privacy-agree">(필수) 개인정보 수집·이용 동의</label>
+                            <a class="privacy-toggle-link">[자세히 보기 <span class="arrow">▼</span>]</a>
+                        </div>
+                        <div class="privacy-content">
+                            <div class="privacy-box">
+                                <p>주식회사 웅진씽크빅(이하 '회사')은 유데미 코리아 서비스의 자료 제공 및 상담 신청을 위해 아래와 같이 개인정보를 수집·이용합니다.</p>
+                                <p><strong>1. 수집하는 개인정보 항목</strong><br>
+                                    - [필수] 이름, 회사 이메일, 전화번호, 직책(직함), 회사/기관명<br>
+                                    - [선택] 문의사항</p>
+                                <p><strong>2. 개인정보의 수집 및 이용 목적</strong><br>
+                                    - 신청자 본인 확인, 요청 자료(PDF 등) 발송<br>
+                                    - 상담 신청 접수 및 진행, 관련 문의 응대</p>
+                                <p><strong>3. 개인정보 처리 위탁</strong><br>
+                                    - 회사는 원활한 서비스 제공을 위해 아래와 같이 개인정보 처리 업무를 위탁합니다.<br>
+                                    - <strong>수탁사: Odoo (Odoo S.A.)</strong><br>
+                                    - <strong>위탁업무: 고객정보 관리 및 상담 이력 저장 (CRM 솔루션 운영)</strong></p>
+                                <p><strong>4. 개인정보의 보유 및 이용 기간</strong><br>
+                                    - 원칙: 수집·이용 목적 달성 시(자료 제공 완료, 상담 종료 시) 지체 없이 파기<br>
+                                    - 단, 관계 법령의 규정에 따라 보관할 필요가 있는 경우 해당 기간까지 보관합니다.</p>
+                                <p><strong>5. 동의 거부 권리 및 불이익</strong><br>
+                                    - 귀하는 위 개인정보 수집·이용에 대한 동의를 거부할 권리가 있습니다.<br>
+                                    - 단, 필수 항목의 수집·이용에 동의하지 않으실 경우, 자료 다운로드 및 상담 신청 서비스 이용이 제한될 수 있습니다.</p>
+                            </div>
+                        </div>
                         <div class="error-message checkbox-error"></div>
                     </div>
 
-                </div>
+                    <div class="form-group privacy-group">
+                        <div class="privacy-group-header">
+                            <input type="checkbox" id="agree_optional" name="agree_optional" value="Y">
+                            <label for="agree_optional">(선택) 광고성 정보 수신 동의</label>
+                            <a class="privacy-toggle-link">[자세히 보기 <span class="arrow">▼</span>]</a>
+                        </div>
+                        <div class="privacy-content">
+                            <div class="privacy-box">
+                              <p>유데미 코리아의 신규 서비스, 이벤트, 웨비나, 할인 혜택 등 유용한 정보를 (이메일, SMS, 전화 등)으로 수신하는 데 동의합니다.</p>
+                              <p>- <strong>보유 및 이용 기간:</strong> 동의 철회 시 또는 회원 탈퇴 시까지<br>
+                              - ※ 선택 동의를 거부하셔도 자료 다운로드 및 상담 신청은 가능합니다.</p>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
 
                 <p class="required-note">* 표시는 필수 입력 항목입니다.</p>
 
