--- a/index.html
+++ b/index.html
@@ -71,15 +71,24 @@
                     <div class="progress-bar-fill" id="progress-fill"></div>
                     
                     <div class="progress-step active" data-step="1">
-                        <div class="step-circle">1</div>
+                        <div class="step-circle">
+                            <span class="step-number">1</span>
+                            <span class="step-checkmark">✔️</span>
+                        </div>
                         <div class="step-label">기본 정보</div>
                     </div>
                     <div class="progress-step" data-step="2">
-                        <div class="step-circle">2</div>
+                        <div class="step-circle">
+                            <span class="step-number">2</span>
+                            <span class="step-checkmark">✔️</span>
+                        </div>
                         <div class="step-label">회사 정보</div>
                     </div>
                     <div class="progress-step" data-step="3">
-                        <div class="step-circle">3</div>
+                        <div class="step-circle">
+                            <span class="step-number">3</span>
+                            <span class="step-checkmark">✔️</span>
+                        </div>
                         <div class="step-label">문의</div>
                     </div>
                 </div>
@@ -197,7 +206,7 @@
                             </div>
                         </div>
                     </div>
-                    </div>
+                </div>
 
                 <p class="required-note">* 표시는 필수 입력 항목입니다.</p>
 
