--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                         </div>
                         <div class="error-message checkbox-error"></div>
                     </div>
+                    </div>
 
                 <p class="required-note">* 표시는 필수 입력 항목입니다.</p>
 
