--- a/download-lotte.html
+++ b/download-lotte.html
@@ -128,22 +128,14 @@
                         </div>
                         <div class="privacy-content">
                             <div class="privacy-box">
-                                <p>주식회사 웅진씽크빅(이하 '회사')은 유데미 코리아 서비스의 자료 제공 및 상담 신청을 위해 아래와 같이 개인정보를 수집·이용합니다.</p>
-                                <p><strong>1. 수집하는 개인정보 항목</strong><br>
-                                    - [필수] 이름, 회사 이메일, 전화번호, 직책(직함), 회사/기관명</p>
-                                <p><strong>2. 개인정보의 수집 및 이용 목적</strong><br>
-                                    - 신청자 본인 확인, 요청 자료(PDF 등) 발송<br>
-                                    - 상담 신청 접수 및 진행, 관련 문의 응대</p>
-                                <p><strong>3. 개인정보 처리 위탁</strong><br>
-                                    - 회사는 원활한 서비스 제공을 위해 아래와 같이 개인정보 처리 업무를 위탁합니다.<br>
-                                    - <strong>수탁사: Odoo (Odoo S.A.)</strong><br>
-                                    - <strong>위탁업무: 고객정보 관리 및 상담 이력 저장 (CRM 솔루션 운영)</strong></p>
-                                <p><strong>4. 개인정보의 보유 및 이용 기간</strong><br>
-                                    - 원칙: 수집·이용 목적 달성 시(자료 제공 완료, 상담 종료 시) 지체 없이 파기<br>
-                                    - 단, 관계 법령의 규정에 따라 보관할 필요가 있는 경우 해당 기간까지 보관합니다.</p>
-                                <p><strong>5. 동의 거부 권리 및 불이익</strong><br>
-                                    - 귀하는 위 개인정보 수집·이용에 대한 동의를 거부할 권리가 있습니다.<br>
-                                    - 단, 필수 항목의 수집·이용에 동의하지 않으실 경우, 자료 다운로드 및 상담 신청 서비스 이용이 제한될 수 있습니다.</p>
+                                <p><strong>개인정보 수집·이용 주체: (주)웅진씽크빅</strong></p>
+                                <p><strong>수집이용 항목:</strong><br>
+                                    - <strong>[필수] 이름, 회사 이메일, 전화번호, 직책(직함), 회사/기관명</strong></p>
+                                <p><strong>수집이용 목적:</strong><br>
+                                    - <strong>신청자 본인 확인, 요청 자료(PDF 등) 발송</strong><br>
+                                    - <strong>상담 신청 접수 및 진행, 관련 문의 응대</strong></p>
+                                <p><strong>보유이용 기간: 문의 응대 종료 시까지 보유하며, 요청 시 즉시 삭제합니다.</strong></p>
+                                <p><strong>동의의 거부 시 불이익:</strong> 동의를 거부하실 경우, 자료 다운로드 및 관련 문의 응대가 제한될 수 있습니다.</p>
                             </div>
                         </div>
                         <div class="error-message checkbox-error"></div>
@@ -157,11 +149,21 @@
                         </div>
                         <div class="privacy-content">
                             <div class="privacy-box">
-                              <p>유데미 코리아의 신규 서비스, 이벤트, 웨비나, 할인 혜택 등 유용한 정보를 (이메일, SMS, 전화 등)으로 수신하는 데 동의합니다.</p>
-                              <p>- <strong>보유 및 이용 기간:</strong> 동의 철회 시 또는 회원 탈퇴 시까지<br>
-                              - ※ 선택 동의를 거부하셔도 자료 다운로드 및 상담 신청은 가능합니다.</p>
+                              <p><strong>개인정보 수집·이용 주체: (주)웅진씽크빅</strong></p>
+                              <p><strong>수집이용 목적: </strong> <strong>유데미</strong> 관련 소식, 혜택 및 이벤트 안내 등 발송</p>
+                              <p><strong>수신 방법:</strong> SMS, 이메일, 전화 등</p>
+                              <p><strong>보유 및 이용기간:</strong> <strong>동의 철회</strong> 요청 시까지</p>
+                              <p>동의의 거부 시 불이익: 동의를 거부하셔도 서비스 이용에는 제한이 없으나, <strong>웅진씽크빅</strong> <strong>유데미</strong>의 최신 소식 및 혜택 정보를 받아보실 수 없습니다.</p>
                             </div>
                         </div>
+                    </div>
+                    
+                    <div class="form-group privacy-group required">
+                        <div class="privacy-group-header">
+                            <input type="checkbox" id="agree_age" name="agree_age" value="Y" required>
+                            <label for="agree_age">(필수) 본인은 만 14세 이상입니다.</label>
+                        </div>
+                        <div class="error-message checkbox-error"></div>
                     </div>
                     </div>
 
