Add new point to testimonial content

--- a/download-trends-2026.html
+++ b/download-trends-2026.html
@@ -46,7 +46,7 @@
                 <div class="testimonial-slider">
                     <div class="testimonial-item active">
                         <h4>주요 내용</h4>
-                        <p>1. 비즈니스 운영 체계로서의 AI 활용 <br>2. 업무 흐름 속 '몰입형 학습'<br>3. 스킬 확장의 조건: 리더십, 윤리, 자율성</p>
+                        <p>1. 비즈니스 운영 체계로서의 AI 활용 <br>2. 업무 흐름 속 '몰입형 학습'<br>3. 스킬 확장의 조건: 리더십, 윤리, 자율성<br>4. 기술을 뛰어넘는 '적응력'</p>
                     </div>
                 </div>
 
