--- a/download-trends-2026.html
+++ b/download-trends-2026.html
@@ -64,7 +64,7 @@
             <img src="udemy-logo-purple.png" alt="Udemy Business Logo" class="mobile-logo">
 
             <div class="mobile-info-pane">
-                <p>AI 시대의 필독서: <strong>2026 글로벌 스킬 트렌드</strong></p>
+                <p>AI 시대의 필독서: <strong>2026 글로벌 스킬 트렌드 리포트</strong></p>
                 <p class="mobile-trusted-by">조직 성장을 위한 핵심 인사이트를 확인하세요.</p>
             </div>
 
@@ -76,7 +76,7 @@
                 </p>
 
                 <div class="form-step active" data-step="1">
-                    <h3 class="step-title"><strong>🌏 2026 글로벌 스킬 트렌드</strong></h3>
+                    <h3 class="step-title"><strong>🌏 2026 글로벌 스킬 트렌드 리포트</strong></h3>
                     
                     <div class="form-group floating required">
                         <span class="icon">👤</span>
