--- a/download-trends-2026.html
+++ b/download-trends-2026.html
@@ -38,9 +38,9 @@
                 
                 <p class="trusted-by-line">
                     AI는 이제 기술적 목표가 아닌 새로운 비즈니스 운영 체계입니다.<br><br>
-                    트렌드 보고서를 통해 조직의 성장을 위한 가장 확실한 내비게이션을 확인하고,
-                    AI 혁신의 차세대 혁신을 실천해 보세요.<br><br>
-                    AI는 결승점이 아닌 '시작점'이니까요!
+                    트렌드 보고서를 통해 조직의 성장을 위한 가장 확실한 내비게이션을 확인하고,<br>
+                    AI의 차세대 혁신을 실천해 보세요.<br><br>
+                    AI는 결승점이 아닌 '시작점' 이니까요!
                 </p>
                 
                 <div class="testimonial-slider">
