Update trusted companies in index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p>미래를 준비하는 기업들의<br><strong>마지막 선택!</strong></p>
                 
                 <p class="trusted-by-line">
-                    삼성, SK, 현대, LG, 롯데, KT, POSCO 등<br>
+                    삼성, SK, 현대, 롯데, KT, POSCO 등<br>
                     국내의 대기업이 이미 함께 성장하고 있습니다.
                 </p>
                 
@@ -57,7 +57,7 @@
 
             <div class="mobile-info-pane">
                 <p>미래를 준비하는 기업들의 <strong>마지막 선택!</strong></p>
-                <p class="mobile-trusted-by">삼성, SK, 현대, LG 등과 함께 성장하세요.</p>
+                <p class="mobile-trusted-by">삼성, SK, 현대, KT 등과 함께 성장하세요.</p>
             </div>
 
             <form id="pro-contact-form">
